virtual con animated style

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body class="mat-typography container">
     <app-root></app-root>
